<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.indiana.strimm.tictactoe.GameScreenActivity">

    <!--
menu_game_screen.xml
Controls the items on the toolbar on the Game Screen
Created By: Shaun Trimm
Created On: 2-28-2020
Last Modified By: Shaun Trimm
Last Modified On: 3-6-2020
Assignment: A290 Final Project Phase 3
-->

    <!-- Menu button that undos the last move made by the user -->
    <item
        android:title="@string/undo_text"
        android:id="@+id/itmGameUndo"
        app:showAsAction="always"
        ></item>
    <!-- Menu button which clears the game grid -->
    <item
        android:title="@string/clear_text"
        android:id="@+id/itmGameClear"
        app:showAsAction="always"
        ></item>
    <!-- Menu button that takes you to the about screen -->
    <item
        android:id="@+id/itmGameAboutGame"
        android:title="@string/about_text"
        app:showAsAction="always"
        />


</menu>