<?xml version="1.0" encoding="utf-8"?>
<!--
content_main.xml
Controls the layout for the home screen
Created By: Shaun Trimm
Created On: 2-25-2020
Last Modified By: Shaun Trimm
Last Modified On: 3-5-2020
Assignment: A290 Final Project Phase 3
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_heading"
        android:textSize="30pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/txtChooseColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_color_text"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogo"></TextView>

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/start_game"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogo"
        app:layout_constraintVertical_bias="0.796"></Button>

    <RadioButton
        android:id="@+id/rbtnYellowPurpleOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:drawableRight="@drawable/selectionyellowpurple"
        android:onClick="onRadioButtonClicked"
        app:layout_constraintBottom_toTopOf="@+id/btnStartGame"
        app:layout_constraintEnd_toEndOf="@+id/rbtnBlueRedOption"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rbtnBlueRedOption">

    </RadioButton>

    <RadioButton
        android:id="@+id/rbtnBlueRedOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:drawableRight="@drawable/selectionbluered"
        android:onClick="onRadioButtonClicked"
        app:layout_constraintBottom_toTopOf="@+id/rbtnYellowPurpleOption"
        app:layout_constraintEnd_toEndOf="@+id/btnStartGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChooseColor">

    </RadioButton>


</androidx.constraintlayout.widget.ConstraintLayout>